--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -34,15 +34,6 @@
             android:padding="20dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:gravity="center"
-                android:paddingBottom="20dp"
-                android:text="Delivery Charges: Rs 20"
-                android:textColor="@color/dark_brown"
-                android:textSize="18sp" />
-
-            <TextView
                 android:id="@+id/tvOrderPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
@@ -51,6 +42,14 @@
                 android:text="Order Price:"
                 android:textColor="@color/dark_brown"
                 android:textSize="18sp" />
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:gravity="center"
+            android:paddingBottom="20dp"
+            android:text="Delivery Charges: 20"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/tvTotalAmount"
