--- a/app/src/main/res/layout/activity_change_password_student.xml
+++ b/app/src/main/res/layout/activity_change_password_student.xml
@@ -27,6 +27,7 @@
         android:background="@color/light_yellow"
     android:layout_marginStart="40dp"
     android:layout_marginEnd="40dp"
+        android:textColor="@color/dark_brown"
     android:layout_height="48dp"
     android:layout_marginTop="60dp"
     android:hint="Old Password"
@@ -39,6 +40,7 @@
         android:layout_marginEnd="40dp"
         android:layout_height="48dp"
         android:layout_marginTop="120dp"
+        android:textColor="@color/dark_brown"
         android:background="@color/light_yellow"
         android:hint="New Password"
         android:inputType="textPassword"/>
@@ -46,6 +48,7 @@
     <EditText
         android:id="@+id/confirm_password"
         android:layout_marginStart="40dp"
+        android:textColor="@color/dark_brown"
         android:layout_marginEnd="40dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
