--- a/app/src/main/res/layout/activity_delivery_home.xml
+++ b/app/src/main/res/layout/activity_delivery_home.xml
@@ -33,7 +33,6 @@
             android:id="@+id/swlcm"
             android:layout_width="300dp"
             android:layout_height="50dp"
-
             android:text="Welcome Delivery Man...."
             android:textColor="@color/white"
             android:textSize="22sp"
@@ -81,47 +80,14 @@
             android:textColor="@color/white"
             android:textSize="20sp" />
 
-        <!-- CardView for Order ID and Status -->
-        <androidx.cardview.widget.CardView
+        <!-- RecyclerView to replace CardView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ordersRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:elevation="6dp"
-            android:radius="8dp"
-            card_view:contentPadding="16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/light_yellow"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/orderDetailsText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Order ID: - \nStatus: -"
-                    android:textColor="@color/dark_brown"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/completeOrderButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:backgroundTint="@color/dark_orange"
-                    android:padding="12dp"
-                    android:text="Complete Order"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
+            android:layout_weight="1" />
 
     </LinearLayout>
-
-    <!-- Logout Button (ImageButton) -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
