--- a/app/src/main/res/layout/activity_home_page_student.xml
+++ b/app/src/main/res/layout/activity_home_page_student.xml
@@ -19,6 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
             android:elevation="4dp"
+            app:itemIconSize="60dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:navigationIcon="@drawable/ic_menu"
@@ -52,6 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/bottom_nevigation"
+                    app:itemIconSize="30dp"
                     app:labelVisibilityMode="labeled"
                     app:itemIconTint="@color/white"
                     app:itemTextColor="@color/white"
@@ -59,17 +61,6 @@
                     android:background="@color/dark_orange"/>
             </com.google.android.material.bottomappbar.BottomAppBar>
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:src="@drawable/baseline_add_24"
-                android:tint="@color/dark_brown"
-                app:layout_anchor="@+id/bottomAppBar"
-                app:layout_anchorGravity="center"
-                app:maxImageSize="44dp"
-                android:contentDescription="Add new item" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </RelativeLayout>
 
