--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -6,6 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/yellow"
     tools:context=".MainActivity">
 
@@ -149,7 +150,7 @@
                     android:layout_marginEnd="40dp"
                     android:buttonTint="@color/light_yellow"
                     android:checked="true"
-                    android:text="Student"
+                    android:text="User"
                     android:textSize="16sp" />
 
                 <RadioButton
