--- a/app/src/main/res/layout/fragment__home_student.xml
+++ b/app/src/main/res/layout/fragment__home_student.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,16 +18,26 @@
             android:layout_height="wrap_content"
             android:elevation="3dp"
             android:shadowColor="@color/white"
+            android:textSize="14sp"
             android:textColor="@color/dark_brown"
             android:textColorHint="@color/dark_brown"
             android:layout_margin="8dp"
             android:drawableLeft="@drawable/baseline_contentsearch_24"
             android:padding="13dp"
+            android:background="@color/light_yellow"
             android:hint="Search Your Item Here...."
             app:drawableTint="@color/dark_orange"
             android:drawablePadding="5dp"/>
 
-        <!-- Popular Products Section -->
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+
+        <!-- No Results Text -->
         <TextView
             android:id="@+id/no_results_text"
             android:layout_width="match_parent"
@@ -38,21 +47,42 @@
             android:textSize="18sp"
             android:textColor="@android:color/darker_gray"
             android:visibility="gone"
-            android:layout_marginTop="16dp"
-            />
+            android:layout_marginTop="16dp"/>
 
-
-
+        <!-- Horizontal Category RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/pop_rec"
+            android:id="@+id/hor_rec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg_poprec"
             android:layout_margin="5dp"
             android:padding="12dp"
             android:text="Popular Item"
             android:textColor="@color/dark_brown"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:nestedScrollingEnabled="true"/>
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Items"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+
+        <!-- Vertical Product RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pop_rec"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_margin="5dp"
+            android:padding="12dp"
+            android:layout_gravity="center"
+            android:background="@drawable/bg_poprec"
+            android:text="Popular Item"
+            android:textColor="@color/dark_brown"
+            android:gravity="center"
+            android:nestedScrollingEnabled="true"/>
 
     </LinearLayout>
-
 </ScrollView>
