--- a/app/src/main/res/layout/fragment__contactus_student.xml
+++ b/app/src/main/res/layout/fragment__contactus_student.xml
@@ -12,13 +12,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Contact Us"
-        android:textSize="26sp"
-        android:textColor="@color/white"
-        android:layout_marginTop="40dp"
-        android:textStyle="bold"
+        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:paddingBottom="10dp" />
+        android:paddingBottom="10dp"
+        android:text="Contact Us"
+        android:textColor="@color/white"
+        android:textSize="26sp"
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -55,8 +55,8 @@
 
 
         <LinearLayout
-            android:layout_width="358dp"
-            android:layout_height="440dp"
+            android:layout_width="352dp"
+            android:layout_height="441dp"
             android:layout_marginTop="150dp"
             android:orientation="vertical">
 
@@ -69,6 +69,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/light_yellow"
                 android:hint="Your Name"
+                android:textColor="@color/dark_brown"
                 android:padding="10dp" />
 
             <EditText
@@ -77,6 +78,7 @@
                 android:layout_height="48dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/dark_brown"
                 android:layout_marginEnd="10dp"
                 android:background="@color/light_yellow"
                 android:hint="Your Email"
@@ -88,6 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginStart="10dp"
+                android:textColor="@color/dark_brown"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@color/light_yellow"
@@ -96,11 +99,12 @@
 
             <EditText
                 android:id="@+id/etMessage"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_width="332dp"
+                android:layout_height="63dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:textColor="@color/dark_brown"
                 android:background="@color/light_yellow"
                 android:gravity="top"
                 android:hint="Your Message"
